# helix-staking

./: .audit.toml  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  audit.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.audit/: README.md  business-logic-team.md  deployment-ops-team.md  mev-ordering-team.md  phase-8.1-complete-audit-feb-11-2026.md  runtime-team-consolidated-report.md  security-team.md  solana-runtime-team.md  user-facing-security-team.md  xray-operator-runbook.md  xray-static-analysis-feb-9-2026.md
.claude/: settings.json
.github/: copilot-instructions.md
.planning/: CONTEXT-HANDOFF.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.specify/: AUTOMATED_TOOLS_ASSESSMENT.md  CLIPPY_CARGO_AUDIT_GUIDE.md  (+10 more)
programs/helix-staking/: CLAUDE.md  Cargo.toml  programs_helix-staking.ll
programs/helix-staking/src/: constants.rs  error.rs  events.rs  lib.rs  security.rs
programs/helix-staking/src/instructions/: abort_bpd.rs  accept_authority.rs  admin_mint.rs  admin_set_bpd_finalize_timestamp.rs  admin_set_claim_end_slot.rs  admin_set_slots_per_day.rs  claim_rewards.rs  crank_distribution.rs  create_stake.rs  create_stake_with_referral.rs  finalize_bpd_calculation.rs  free_claim.rs  initialize.rs  initialize_claim_period.rs  math.rs  migrate_stake.rs  mod.rs  pause.rs  seal_bpd_finalize.rs  transfer_authority.rs  trigger_big_pay_day.rs  unpause.rs  unstake.rs  withdraw_vested.rs
programs/helix-staking/src/security/: pda.rs
programs/helix-staking/src/state/: claim_config.rs  claim_status.rs  global_state.rs  mod.rs  pending_authority.rs  referral_record.rs  stake_account.rs
(+554 files in other folders)
