[package]
name = "helix-staking"
version = "0.1.0"
description = "HELIX staking protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helix_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31", features = [] }
anchor-spl = { version = "0.31", features = ["metadata"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
